@@ -4,5 +4,3 @@
 * improve drag'n'drop styling
 
 * background for indented tabs should cover the whole width
-
-* make slider between tabbar and content thinner?
